<resources>
    <string name="app_name">DEKa</string>
    <string name="login">Login</string>
    <string name="des_login">Login dengan nomor telepon</string>
    <string name="next">Next</string>
    <string name="tv_daftar">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="nama">Nama</string>
    <string name="des_registrasi">Selamat Datang di, DEKa!</string>
    <string name="des_registrasi1">Daftarkan akun mu sebelum menggunakan aplikasi ini.</string>
    <string name="deskripsi_otp">Masukan kode OTP yang sudah dikrimkan ke nomor telepon anda</string>
    <string name="email">Email</string>
    <string name="insert_pin_desc">Masukan PIN </string>
    <string name="title_home_botnav">Home</string>
    <string name="title_dompet_botnav">Dompet</string>
    <string name="title_payment_botnav">Payment</string>
    <string name="title_history_botnav">History</string>
    <string name="title_profile_botnav">Profile</string>
    <string name="turn_off_flashlight">Off</string>
    <string name="turn_on_flashlight">On</string>
    <string name="help_text_scan_qr">Pastikan QR code yang anda scan terlihat, jika dalam keadaan gelap atau kurang cahaya, gunakan fungsi flashlight dengan menekan tombol dibawah</string>
    <string name="tv_bayar_ke">Bayar Ke :</string>
    <string name="tv_saldo_anda">Saldo anda :</string>
    <string name="text_batalkan">Batalkan</string>
    <string name="text_bayar">Bayar</string>
    <string name="txt_stat_pembayaran">Status Pembayaran :</string>
    <string name="tv_no_transaksi">No Transaksi :</string>
    <string name="ex_no_transaksi">XXXXXXXX</string>
    <string name="nama_toko">TOKO BLABLA</string>
    <string name="nominal">Nominal :</string>
    <string name="ex_nominal_uang">Rp300.000</string>
    <string name="lihat_riwayat">Lihat di riwayat</string>
    <string name="tutup">Tutup</string>
    <string name="ask_payment_confirm">Apakah anda yakin akan membatalkan pembayaran ?</string>
    <string name="setuju">Setuju</string>
    <string name="kembali">Kembali</string>
    <string name="tv_metode_top_up">Pilih Metode Top Up</string>
    <string name="merchant">Merchant</string>
    <string name="tv_ket_top_up_merchant">Pembayaran dilakukan melalui merchant yang tersedia di kampus anda</string>
    <string name="tv_pilih_metode">Pilih metode</string>
    <string name="tv_ket_metode_bri">Pembayaran dilakukan melalui transfer ke Virtual Account BRI</string>
    <string name="tv_transfer_ke">Transfer Ke :</string>
    <string name="text_transfer">Transfer</string>


    <string name="tv_transfer_pakai_apa">Mau transfer pakai apa?</string>
    <string name="tv_kirim_pake_notelpn">kirim Ke Nomor Telepon</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string name="nama_polban">Politeknik Negeri Bandung</string>
    <string name="nama_itb">Institut Teknologi Bandung</string>
    <string name="nama_ui">Universitas Indonesia</string>
    <string name="tv_nim">Masukan Nomor Induk Mahasiswa</string>
    <string name="contoh_deskripsi_event">Contoh Deskripsi dari acara berikut adalah bla blab lab lab lab labalb lab lbalbalb lablbalblabablb albl bal</string>
    <string name="contoh">contoh</string>


</resources>
