<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".activity.topup.TopupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_topup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_topup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.ToolbarSaya"
            android:background="@color/color1"
            app:title="Pilih Metode Topup"
            app:titleTextColor="@color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            />
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
        android:id="@+id/card_view_merchant_topup"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@id/appbar_topup"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_icontopupmerchant"/>
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_margin="10dp"
                   android:layout_gravity="center_vertical"
                   >

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/merchant"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/tv_ket_top_up_merchant"
                       />

                   <Button
                       android:id="@+id/btn_merchant_topup"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:backgroundTint="@color/white"
                       android:textColor="@color/color2"
                       android:text="@string/tv_pilih_metode"
                       android:textStyle="bold"
                       android:layout_gravity="bottom"
                       android:layout_marginStart="30dp"
                       />


               </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_bri_topup"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@id/card_view_merchant_topup"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_icontopupapi"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Transfer"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ket_metode_bri"
                    />

                <Button
                    android:id="@+id/btn_bri_topup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/color2"
                    android:text="@string/tv_pilih_metode"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="30dp"
                    />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>